# software-inventory-collector-personal

./: README.md  pyproject.toml  tox.ini
inventory_collector/: __init__.py  cli.py  collector.py  config.py  exception.py
snap/: snapcraft.yaml
software_inventory_collector/: cli.py
